--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a class="active" href="#home">Home</a>
             <a href="#contact">Contact</a>
             <a href="#about">About</a>
+            <a href="#Print">Print</a>
         </div>
          <div class="my-4 input-group">
             <input type="text" id="word" class="form-control" placeholder="enter the word">
