--- a/index.html
+++ b/index.html
@@ -27,6 +27,16 @@
             <button id="searchbtn" class="btn btn-outline-success btn" type="button">Search</button>
         </div>
         <div class="my-2" id="message"></div>
+        <table class="my-3 table table-danger table-responsive  table-striped table-hover">
+            <thead class="table-danger">
+                <tr>
+                    <th scope="col">Word</th>
+                    <th scope="col">Definitions</th>
+                </tr>
+            </thead>
+            <tbody id="tablehead">
+            </tbody>
+        </table>
         <hr>
         <table class="table table-dark table-responsive table-borderless table-striped table-hover">
             <thead class="table-warning">
